--- a/discovery.html
+++ b/discovery.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="en" data-theme="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main</title>
+    <title>Taskmeter</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.24/dist/full.min.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-
-<body class="poppins-regular bg-blue-50 min-h-screen">
+<body  class="poppins-regular bg-blue-50 min-h-screen">
     <header class="pt-4 w-4/5 mx-auto">
         <div class="navbar bg-white rounded-xl">
             <div class="flex-1 gap-2 pl-2">
@@ -24,88 +30,80 @@
         <div class=" bg-white p-4 rounded-md space-y-3">
             <p class="font-semibold">Question-1: What are the different ways to select an element in the DOM?</p>
             <hr class="border-dashed">
-            <p>There Are Several Ways- <br>
-                1.By the Function:getElementById() - It identify and Get the element by The Called ID and after this We
-                can
+             <p>There Are Several Ways- <br>
+                1.By the Function:getElementById() - It identify and Get the element by The Called ID and after this We can 
                 create any operation. <br>
-                2.By Function getElementsByClassName() - Taking The elements through this we can held operation on the
-                variable.But the difference with ID is we can use it on different elements so it is useds as elements.
-                <br>
+                2.By Function getElementsByClassName() - Taking The elements through this we can held operation on the variable.But the difference with ID is we can use it on different elements so it is useds as elements. <br>
                 3.By getElementsByTagName() - Like Class it takes bunch of elements from HTML. <br>
                 4.By querySelector() - This function returns only the first matching element.Only take one element. <br>
                 5.By querySelectorAll() - This function selects a list of elements and takes all matching elements.
-            </p>
+             </p>
         </div>
         <div class=" bg-white p-4 rounded-md space-y-3">
-            <p class="font-semibold">Question-2: What is the difference between innerHTML, innerText, and textContent ?
-            </p>
-            <hr class="border-dashed">
-            <div class="overflow-x-auto">
-                <table class="table">
-                    <!-- head -->
-                    <thead>
-                        <tr>
-                            <th></th>
-                            <th>innerHTML</th>
-                            <th>innerText</th>
-                            <th>textContent</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <!-- row 1 -->
-                        <tr class="bg-base-200">
-                            <th>1</th>
-                            <td>Reads and Takes entire HTML in the selected tag or element.</td>
-                            <td>Reads and Takes only visible text selected tag or element</td>
-                            <td>Reads and Takes visible and Hidden both text in the selected tag or element</td>
-                        </tr>
-                        <!-- row 2 -->
-                        <tr>
-                            <th>2</th>
-                            <td>Modify or Insert HTML content dynamically,can change HTML elements.</td>
-                            <td>Not dynamic reference to HTML content,Only text return.</td>
-                            <td>Only text content can be changed</td>
-                        </tr>
-                        <!-- row 3 -->
-                        <tr class="bg-base-200">
-                            <th>3</th>
-                            <td>Doesn't Include Hidden tags or element.</td>
-                            <td>It doesn't also include Hidden text.</td>
-                            <td>It includes Hidden and Visible text both.</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
+           <p class="font-semibold">Question-2: What is the difference between innerHTML, innerText, and textContent ?</p>
+           <hr class="border-dashed">
+           <div class="overflow-x-auto">
+            <table class="table">
+              <!-- head -->
+              <thead>
+                <tr>
+                  <th></th>
+                  <th>innerHTML</th>
+                  <th>innerText</th>
+                  <th>textContent</th>
+                </tr>
+              </thead>
+              <tbody>
+                <!-- row 1 -->
+                <tr class="bg-base-200">
+                  <th>1</th>
+                  <td>Reads and Takes entire HTML in the selected tag or element.</td>
+                  <td>Reads and Takes only visible text selected tag or element</td>
+                  <td>Reads and Takes visible and Hidden both text in the selected tag or element</td>
+                </tr>
+                <!-- row 2 -->
+                <tr>
+                  <th>2</th>
+                  <td>Modify or Insert HTML content dynamically,can change HTML elements.</td>
+                  <td>Not dynamic reference to HTML content,Only text return.</td>
+                  <td>Only text content can be changed</td>
+                </tr>
+                <!-- row 3 -->
+                <tr class="bg-base-200">
+                  <th>3</th>
+                  <td>Doesn't Include Hidden tags or element.</td>
+                  <td>It doesn't also include Hidden text.</td>
+                  <td>It includes Hidden and Visible text both.</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
         </div>
         <div class=" bg-white p-4 rounded-md space-y-3">
             <p class="font-semibold">Question-3: What is event delegation in the DOM?</p>
             <hr class="border-dashed">
-            <p>If we take a single element or parent element,we can handle events on child or parent element effectively
-                using addeventlistener,
-                Where the event is happening is called event delegation.
+            <p>If we take a single element or parent element,we can handle events on child or parent element effectively using addeventlistener,
+              Where the event is happening is called event delegation.
             </p>
         </div>
         <div class=" bg-white p-4 rounded-md space-y-3">
             <p class="font-semibold">Question-4: What is event bubbling in the DOM?</p>
             <hr class="border-dashed">
             <p>Event bubbling means when a event is triggered it access the child element,then the parent ,
-                along all the way to main body ,document object,this process is called ,event bubbling.
+              along all the way to main body ,document object,this process is called ,event bubbling.
             </p>
         </div>
         <div class=" bg-white p-4 rounded-md space-y-3">
             <p class="font-semibold">Question-5: How do you create, add, and remove elements using JavaScript?</p>
             <hr class="border-dashed">
-            <p>1:Creating element:We can create an element like paragraph or div or section using
-                document.createElement(). <br>
-                2:Adding element:Using appendChild() [parent.appendChild(childElement)] we can add a child element in
-                Parent container. <br>
-                3.Removing a element:Using removeChild() we can remove a element from a parent div.
+            <p>1:Creating element:We can create an element like paragraph or div or section using document.createElement(). <br>
+              2:Adding element:Using appendChild() [parent.appendChild(childElement)] we can add a child element in Parent container. <br>
+              3.Removing a element:Using removeChild() we can remove a element from a parent div.
             </p>
         </div>
-
-
+       
+        
     </main>
     <script src="js/script.js"></script>
 </body>
-
 </html>
