--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </header>
     <!-- Ending Header -->
     <!-- Main section -->
-    <main class="w-11/12 mx-auto mt-5 rounded-xl gap-5 grid lg:grid-cols-7 pb-14">
+    <main class="w-11/12 mx-auto mt-5 rounded-2xl gap-6 grid lg:grid-cols-7 pb-14">
         <section class="bg-white p-6 lg:col-span-5 rounded-lg">
             <!-- Top 3 cards -->
             <section class="grid lg:grid-cols-4 md:grid-cols-3 gap-4">
@@ -69,7 +69,7 @@
                     </div>
                 </div>
             </section>
-            <hr class="border-dashed mt-7">
+            <hr class="border-dashed border-2 mt-8">
             <!-- Common Cards -->
             <section class="grid xl:grid-cols-3 lg:grid-cols-2 grid-cols-1 gap-4 mt-7">
                 <div class="p-4 rounded-xl bg-blue-50 space-y-4">
@@ -86,7 +86,7 @@
                             <p class="text-gray-500 text-sm">Deadline</p>
                             <p>21 March 2025</p>
                         </div>
-                        <button id="btn-one" class="btn btn-completed border-none hover:bg-gray-500 text-white bg-[#3752FD]">Completed</button>
+                        <button id="btn-one" class="btn btn-completed border-none hover:bg-green-500 text-white bg-[#3752FD]">Completed</button>
                     </div>
                 </div>
                 <div class="p-4 rounded-xl bg-blue-50 space-y-4">
