ar na please ar na

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
             </section>
             <hr class="border-dashed border-2 mt-8">
             <!-- Common Cards -->
-            <section class="grid xl:grid-cols-3 lg:grid-cols-2 grid-cols-1 gap-4 mt-7">
-                <div class="p-4 rounded-xl bg-blue-50 space-y-4">
+            <section class="grid xl:grid-cols-3 lg:grid-cols-2 grid-cols-1 gap-5 mt-7">
+                <div class="p-5 rounded-xl bg-blue-50 space-y-4">
                     <button class="px-3 py-2 rounded-lg bg-white">ShopEase</button>
                     <p id="task-one" class="2xl:text-2xl text-xl font-[500]">Fix Mobile Button Issue</p>
                     <p title="check for overlapping elements, and ensure onClick works properly and ensure onClick works properly"
@@ -181,9 +181,9 @@
                 <p>Activity Log</p>
             </div>
             <div class="flex justify-center">
-                <button id="clear-btn" class="bg-[#3752FD] btn border-none hover:bg-red-800 text-white">Clear History</button>
+                <button id="clear-btn" class="bg-[#3752FD] btn border-none hover:bg-yellow-600 text-white">Clear History</button>
             </div>
-            <hr class="border-dashed">
+            <hr class="border-dashed border-2">
             <div id="activity-container">
             </div>
         </section>
